# IOCompiler

./: .gitignore  CMakeLists.txt  README.md  include
benchmarks/: CMakeLists.txt  compare_mpi_io.py  database_wal_benchmark.cpp  lto_bench_log.cpp  lto_bench_main.cpp  mpi_write_at_benchmark.cpp  pixel_write_benchmark.cpp  repeat_time_io.py  repeat_time_mpi_io.py  run_compare_output.sh  run_time_output.sh  time_io.py
combined-tests/: end_to_end_lib.cpp  end_to_end_main.cpp  end_to_end_main.mlir  lit.site.cfg.py  test_runner.sh
harness-src/: ioopt.py
llvm-src/: CMakeLists.txt  IOOptimisationPass.cpp
llvm-tests/: boundary_asymmetry.cpp  cross_block_hoist.c  cxx_write_merge.cpp  file_descriptor_change.cpp  fwrite_barrier.cpp  fwrite_size_count_corruption.cpp  hazard_alias_mutation.cpp  hazard_opaque_barrier.cpp  hoist_edge_cases.c  hoist_positive.c  ipa_collapse.cpp  length_dominance_hazard.cpp  loop_lazy_flush_dynamic.cpp  loop_lazy_flush_high_watermark.cpp  loop_lazy_flush_positive.cpp  lto_merge.cpp  merge_negative.c  merge_positive.c  more_io_tests.cpp  mpi_contiguous.cpp  mpi_status_corruption.cpp  no_speculative_read.cpp  offset_pwrite_contigious.cpp  optimised_pwrite.cpp  partial_write_spoof.cpp  posix_read_hoist.c  posix_write_merge.c  pwrite_overlap.cpp  scev_loop.c  shadow_buffer.cpp  strided_gather.cpp  unprofitable.cpp  vectored.cpp  war_hazard.cpp  writing_tests.cpp
mlir-src/: CMakeLists.txt  IOAdvancedOptimisations.cpp  IODialect.cpp  IODialect.h  IODialect.td  IOLoopBatching.cpp  IOLoweringToLLVM.cpp  IORecognition.cpp  io-opt.cpp
mlir-tests/: .lit_test_times.txt  CMakeLists.txt  async_promotion.mlir  async_test.c  lit.cfg.py  lit.site.cfg.py.in  loop_batching.mlir  lowering_to_llvm.mlir  mmap_test.c  prefetch_test.c  recognise-io.mlir  run_async_test.sh  run_mmap_test.sh  run_prefetch_test.sh  run_vectored_test.sh  test_batch_read_complicated_step.mlir  test_batch_read_step.mlir  test_batch_write_complicated_step.mlir  test_batch_write_step.mlir  test_hazards.mlir  test_loop_batching.mlir  test_read_batching.mlir  vectored_test.c
src/: CMakeLists.txt  IOOptimisationPass.cpp
testing/: benchmark_fio_harness.sh  benchmark_mysql_harness.py  benchmark_postgres_harness.py  benchmark_rocksdb_harness.py  benchmark_rocksdb_shm_harness.py  rocksdb-original-lto-build-setup.sh
tests/: boundary_asymmetry.cpp  cross_block_hoist.c  cxx_write_merge.cpp  file_descriptor_change.cpp  hazard_alias_mutation.cpp  hazard_opaque_barrier.cpp  hoist_edge_cases.c  hoist_positive.c  lit.cfg.py  lit.site.cfg.py.in  loop_lazy_flush_positive.cpp  lto_merge.cpp  merge_negative.c  merge_positive.c  mpi_contiguous.cpp  mpi_status_corruption.cpp  offset_pwrite_contigious.cpp  partial_write_spoof.cpp  posix_read_hoist.c  posix_write_merge.c  scev_loop.c  shadow_buffer.cpp  strided_gather.cpp  unprofitable.cpp  vectored.cpp  writing_tests.cpp
